--- a/GymApp/Views/Exercise/Select.cshtml
+++ b/GymApp/Views/Exercise/Select.cshtml
@@ -18,8 +18,8 @@
                     <!-- Options will be populated by JavaScript -->
                 </select>
 
-                <label for="exercise_type">Exercise Type</label>
-                <input type="text" id="exercise_type" name="exercise_type" required>
+                <label for="exercise_type_id">Exercise Type</label>
+                <input type="text" id="exercise_type_id" name="exercise_type_id" required>
 
                 <label for="sets">Sets</label>
                 <input type="number" id="sets" name="sets" min="1" required>
