--- a/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
@@ -17,8 +17,7 @@
                 <img src="/css/Img/Profile.png" alt="Profile Icon">
                 <span>Create Exercises</span>
             </a>
-            <a href="#">
-                <img src="/css/Img/Profile.png" alt="Profile Icon">
+            <a asp-controller ="Routine" asp-action="RoutineList">
                 <span>My routines</span>
             </a>
             <a href="#">
