--- a/GymApp/Views/Exercise/Select.cshtml
+++ b/GymApp/Views/Exercise/Select.cshtml
@@ -11,7 +11,7 @@
         <h1>Select Exercises for Routine</h1>
         <div class="form-container">
             <form id="selectExercisesForm">
-                <input type="hidden" id="routine_id" name="routine_id" value="@ViewBag.RoutineId" />
+                <input type="hidden" id="routine_id" name="routine_id" />
 
                 <label for="exercise_id">Select Exercise</label>
                 <select id="exercise_id" name="exercise_id">
