--- a/GymApp/Views/Routine/RoutineList.cshtml
+++ b/GymApp/Views/Routine/RoutineList.cshtml
@@ -1,31 +1,30 @@
 ﻿@{
-    ViewData["Title"] = "Lista de Rutinas";
-    Layout = "../Shared/_LayoutUser.cshtml";
-
-    // Simulación de datos obtenidos de la base de datos
-    var routines = new List<dynamic> {
-        new { Id = 1, Name = "Rutina de Fuerza", Description = "Ejercicios de levantamiento de pesas" },
-        new { Id = 2, Name = "Rutina de Cardio", Description = "Entrenamiento cardiovascular intensivo" },
-        new { Id = 3, Name = "Rutina de Flexibilidad", Description = "Estiramientos y movilidad" }
-    };
+    ViewData["Title"] = "List of Routines";
+    Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/users.css" />
-<script src="~/js/Pages/User/Routines.js" defer></script>
+<script src="~/js/pages/Routines/routineList.js" defer></script>
+<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="container">
     <main>
-        <h1 class="display-4">Lista de Rutinas</h1>
-        <div class="routine-list">
-            @foreach (var routine in routines)
-            {
-                <div class="routine-item">
-                    <h2>@routine.Name</h2>
-                    <p>@routine.Description</p>
-                    <a href="@Url.Action("Results", "Routine", new { id = routine.Id })" class="btn btn-primary">Ver Resultados</a>
-                </div>
-            }
-        </div>
+        <h1>List of Routines</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Routine ID</th>
+                    <th>Member ID</th>
+                    <th>Instructor ID</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Creation Date</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="routine-list">
+                <!-- Rutinas y ejercicios se cargarán aquí mediante JavaScript -->
+            </tbody>
+        </table>
     </main>
 </div>
-
