--- a/GymApp/Views/Equipment/Equipmets.cshtml
+++ b/GymApp/Views/Equipment/Equipmets.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Equipment Management";
-    Layout = "../Shared/LayoutEquipment.cshtml";
+    Lyout = "../Shared/_LayoutEquipment.cshtml";
 }
 <script src="~/js/pages/Equipments/equipments.js></script>
 <link rel="stylesheet" href="~/css/Equipments.css" />
