--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -5,13 +5,16 @@
 <link rel="stylesheet" href="~/css/site.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
-<div class="container1">
+
     <main role="main" class="pb-3 center-content">
-        <div>
+        <div class="container pb-3 center-content">
             <h1>YOUR FITNESS JOURNEY STARTS TODAY.</h1>
             <p>READY FOR YOUR FIRST CLASS?</p>
-            <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
+            
+        </div>
+        <div class="container center-content">
+            <img src="/css/Img/background.png" alt="Bacground" class="">
         </div>
     </main>
-</div>
+
 
