--- a/GymApp/Views/Shared/_Layout.cshtml
+++ b/GymApp/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <div class="navbar-content">
                 <a class="navbar-brand" asp-area="" asp-controller="Member" asp-action="MemberPage">
                     <div class="brand-text">
-                        <span class="brand-top">FITNESS CENTER</span>
+                        <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
                     </div>
                 </a>
                 <div class="navbar-links">
@@ -32,8 +32,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="footer text-muted">
+        <div>
             &copy; 2024 - GymApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
