--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -3,7 +3,6 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
-<script src="~/js/Pages/Trainer/Trainer.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
@@ -12,9 +11,11 @@
 <div class="container">
     <main>
         <h2>Welcome Trainer!</h2>
-        <div class="form-container">
-           
-        </div>
+    
+    <div class="text-center">
+        <p>Schedule your Measurement appointment <a asp-controller="Equipment" asp-action="Equipments">Schedule your Appointment here.</a></p>
+    </div>
+     
     </main>
 </div>
 
