--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -13,7 +13,7 @@
         <h2>Welcome Trainer!</h2>
     
     <div class="text-center">
-        <p>Schedule your Measurement appointment <a asp-controller="Equipment" asp-action="Equipments">Schedule your Appointment here.</a></p>
+            <p>Equipment Exercise Management <a asp-controller="Equipment" asp-action="Equipments">Manage Equipments.</a></p>
     </div>
      
     </main>
