--- a/GymApp/Views/Routine/Create.cshtml
+++ b/GymApp/Views/Routine/Create.cshtml
@@ -22,10 +22,10 @@
                     <input type="text" id="name" name="name">
 
                     <label for="description">Description</label>
-                    <input type="text" id="description" name="description">
+                    <input type="text" id="description" name="description" required>
 
                     <label for="creation_date">Creation Date</label>
-                <input type="datetime-local" id="creation_date" name="creation_date">
+                    <input type="datetime-local" id="creation_date" name="creation_date">
 
 
                     <div class="button-container">
