--- a/GymApp/Views/Routine/RoutineList.cshtml
+++ b/GymApp/Views/Routine/RoutineList.cshtml
@@ -4,7 +4,7 @@
 }
 
 <script src="~/js/pages/Routines/routineList.js" defer></script>
-<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="~/css/routinesList.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="container">
@@ -26,5 +26,8 @@
                 <!-- Rutinas y ejercicios se cargarán aquí mediante JavaScript -->
             </tbody>
         </table>
+        <div class="add-exercise-button-container">
+            <a href="/Routine/addExerciseRoutine" class="btn btn-success">Add Exercises</a>
+        </div>
     </main>
 </div>
