--- a/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutineExercise.cshtml
@@ -18,7 +18,8 @@
                 <span>Create Exercises</span>
             </a>
             <a asp-controller ="Routine" asp-action="RoutineList">
-                <span>My routines</span>
+                <img src="/css/Img/Profile.png" alt="Profile Icon">
+                <span>Routines</span>
             </a>
             <a href="#">
                 <img src="/css/Img/Profile.png" alt="Profile Icon">
