--- a/GymApp/Views/Routine/RecordResults.cshtml
+++ b/GymApp/Views/Routine/RecordResults.cshtml
@@ -3,7 +3,7 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 <script src="~/js/pages/Routines/recordResults.js" defer></script>
-<link rel="stylesheet" href="~/css/results.css" />
+<link rel="stylesheet" href="~/css/recordresult.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="container">
