Manege password restrictions
Adding error message and fixing views

--- a/GymApp/Views/Member/MemberPage.cshtml
+++ b/GymApp/Views/Member/MemberPage.cshtml
@@ -3,10 +3,11 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
+<script src="~/js/Pages/Member/Member.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="text-center">
-    <h1 class="display-4">Get Your Membership Here!</h1>
+    <h1 class="display-4">Welcome Member!</h1>
 </div>
 
