--- a/GymApp/Views/Receptionist/ReceptionistPage.cshtml
+++ b/GymApp/Views/Receptionist/ReceptionistPage.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Base Page Receptionists";
+    ViewData["Title"] = "Receptionists Page";
     Layout = "../Shared/_LayoutExercises.cshtml";
 }
 
-<script src="~/js/Pages/Receptionist/" defer></script>
+<script src="~/js/Pages/Receptionist/Receptionist.js" defer></script>
+<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Receptionists</h1>
+    <h1 class="display-4">Welcome Receptionists!</h1>
 </div>
