--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -3,6 +3,7 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
+<script src="~/js/Pages/Trainer/Trainer.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
