--- a/GymApp/Views/Receptionist/ReceptionistPage.cshtml
+++ b/GymApp/Views/Receptionist/ReceptionistPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Receptionists Page";
-    Layout = "../Shared/_LayoutExercises.cshtml";
+    Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 
 <script src="~/js/Pages/Receptionist/Receptionist.js" defer></script>
