--- a/GymApp/Views/Routine/RoutineList.cshtml
+++ b/GymApp/Views/Routine/RoutineList.cshtml
@@ -13,9 +13,8 @@
         <table>
             <thead>
                 <tr>
-                    <th>Routine ID</th>
-                    <th>Member ID</th>
-                    <th>Instructor ID</th>
+                    <th>Member</th>
+                    <th>Instructor</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Creation Date</th>
