--- a/GymApp/Views/Admin/AdminPage.cshtml
+++ b/GymApp/Views/Admin/AdminPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Admin Page";
-    Layout = "../Shared/_LayoutRoutines.cshtml";
+    Layout = "../Shared/_LayoutAdmin.cshtml";
 }
 
 <script src="~/js/Pages/Admin/Admin.js" defer></script>
