Adding Membership Cards

--- a/GymApp/Views/Default/DefaultPage.cshtml
+++ b/GymApp/Views/Default/DefaultPage.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Default Page";
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
@@ -11,9 +10,82 @@
 <div class="container">
     <main>
         <h1>Get Your Membership Here!</h1>
-        <div class="form-container">
-            
-        </div>
+
+        <section class="memberships">
+            <button>
+                <header>LET'S GO BEASIC</header>
+
+                <section>
+                    <section>
+                        <div>
+                            <span>USD80</span>
+                            <span>,00</span>
+                        </div>
+                    </section>
+                    <p>"Get full access to all training equipment"</p>
+                </section>
+            </button>
+
+            <button>
+                <header>LEST'S GO REGULAR</header>
+
+                <section>
+                    <section>
+                        <div>
+                            <span>USD120</span>
+                            <span>,00</span>
+                        </div>
+
+                        <div>
+                            <span>2</span>
+                            <span>
+                                "group classes"
+                                <br>
+                                "per week"
+                            </span>
+                        </div>
+
+                    </section>
+
+                    <p>"Get full access to all training equipment PLUS 2 group classes per week"</p>
+
+                </section>
+            </button>
+
+            <button>
+                <header>LET'S GO PREMIUM</header>
+
+                <section>
+                    <section>
+                        <div>
+                            <span>USD180</span>
+                            <span>,00</span>
+                        </div>
+
+                        <div>
+                            <span>2</span>
+                            <span>
+                                "group classes"
+                                <br>
+                                "per week"
+                            </span>
+                        </div>
+
+                        <div>
+                            <span>Unlimited</span>
+                            <span>
+                                "group classes"
+                            </span>
+                        </div>
+
+                    </section>
+
+                    <p>"Get full access to all training equipment PLUS unlimited access to group classes"</p>
+
+                </section>
+            </button>
+        </section>
+
     </main>
 </div>
 
