--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -6,15 +6,119 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 
-    <main role="main" class="pb-3 center-content">
-        <div class="container pb-3 center-content">
+    <section class="container pb-3 center-content">
+        <div >
             <h1>YOUR FITNESS JOURNEY STARTS TODAY.</h1>
             <p>READY FOR YOUR FIRST CLASS?</p>
-            
+
         </div>
-        <div class="container center-content">
+        <div>
             <img src="/css/Img/background.png" alt="Bacground" class="">
         </div>
-    </main>
+    </section>
+    
+
+    <section class="container pb-3 center-content">
+        <button>
+            <header>LET'S GO BEASIC</header>
+
+            <section>
+                <section>
+                    <div>
+                        <span>USD80</span>
+                        <span>,00</span>
+                    </div>
+                </section>
+                <p>"Get full access to all training equipment"</p>
+            </section>
+        </button>
+
+        <button>
+            <header>LEST'S GO REGULAR</header>
+
+            <section >
+                <section>
+                    <div>
+                        <span>USD120</span>
+                        <span>,00</span>
+                    </div>
+
+                    <div>
+                        <span>2</span>
+                        <span>
+                            "group classes"
+                            <br>
+                            "per week"
+                        </span>
+                    </div>
+
+                </section>
+
+                <p>"Get full access to all training equipment PLUS 2 group classes per week"</p>
+
+            </section>
+        </button>
+
+        <button>
+            <header>LET'S GO PREMIUM</header>
+
+            <section>
+                <section>
+                    <div>
+                        <span>USD180</span>
+                        <span>,00</span>
+                    </div>
+
+                    <div>
+                        <span>2</span>
+                        <span>
+                            "group classes"
+                            <br>
+                            "per week"
+                        </span>
+                    </div>
+
+                    <div>
+                        <span>Unlimited</span>
+                        <span>
+                            "group classes"
+                        </span>
+                    </div>
+
+                </section>
+
+                <p>"Get full access to all training equipment PLUS unlimited access to group classes"</p>
+
+            </section>
+        </button>
+    </section>
+
+    <section class="container pb-3 center-content">
+        <div>
+            <h3>Guachipelin, Escazu</h3>
+            <h3>San Jose, Costa Rica</h3>
+        </div>
+
+        <div>
+            <h3>Contact</h3>
+            <a href="">fitnesscentercenfo@gmail.com</a>
+            <a href="">+506 8635-7398</a>
+        </div>
+
+        <div>
+            <h3>KEEP IN TOUCH</h3>
+            <p>
+                Be the first to hear about our launch, special introductory rates, promotional offers and giveaways!
+            </p>
+
+            <label>Email Address</label>
+            <input id="" type="email" class="form-control" required />
+
+            <div class="button-container">
+                <button type="submit" class="btn btn-success" id="btnLogin">SIGN UP</button>
+            </div>
+        </div>
+    </section>
+
 
 
