--- a/GymApp/Views/Shared/_Layout.cshtml
+++ b/GymApp/Views/Shared/_Layout.cshtml
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Fitness Center</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GymUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar-links">
             <div class="navbar-content">
-                <a class="navbar-brand" asp-area="" asp-controller="Member" asp-action="MemberPage">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <div class="brand-text">
                         <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
                     </div>
@@ -26,8 +25,9 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <div >
+        <main role="main" >
             @RenderBody()
         </main>
     </div>
