Adding Membership functionality

--- a/GymApp/Views/Default/DefaultPage.cshtml
+++ b/GymApp/Views/Default/DefaultPage.cshtml
@@ -9,11 +9,17 @@
 
 <div class="container">
     <main>
-        <h1>Get Your Membership Here!</h1>
+        <div>
+            <h1>Get Your Membership and Start Training Today!</h1>
+            <p>
+                Step into our cutting-edge studios and immerse yourself in the fitness world.
+                Feel happier, build resilience, and thrive like never before!
+            </p>
+        </div>
 
         <section class="memberships">
-            <button>
-                <header>LET'S GO BEASIC</header>
+            <button type="button" class="membership-button" data-membership-type="Basic" data-amount="80">
+                <header>LET'S TRAIN BASIC</header>
 
                 <section>
                     <section>
@@ -26,8 +32,8 @@
                 </section>
             </button>
 
-            <button>
-                <header>LEST'S GO REGULAR</header>
+            <button type="button" class="membership-button" data-membership-type="Regular" data-amount="120">
+                <header>LEST'S TRAIN REGULAR</header>
 
                 <section>
                     <section>
@@ -52,8 +58,8 @@
                 </section>
             </button>
 
-            <button>
-                <header>LET'S GO PREMIUM</header>
+            <button type="button" class="membership-button" data-membership-type="Premium" data-amount="180">
+                <header>LET'S TRAIN PREMIUM</header>
 
                 <section>
                     <section>
