--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 
     <section class="container pb-3 center-content">
         <button>
-            <header>LET'S GO BEASIC</header>
+            <header>LET'S TRAIN BASIC</header>
 
             <section>
                 <section>
@@ -34,7 +34,7 @@
         </button>
 
         <button>
-            <header>LEST'S GO REGULAR</header>
+            <header>LEST'S TRAIN REGULAR</header>
 
             <section >
                 <section>
@@ -60,7 +60,7 @@
         </button>
 
         <button>
-            <header>LET'S GO PREMIUM</header>
+            <header>LET'S TRAIN PREMIUM</header>
 
             <section>
                 <section>
