--- a/GymApp/Views/Routine/RecordResults.cshtml
+++ b/GymApp/Views/Routine/RecordResults.cshtml
@@ -16,6 +16,7 @@
                     <!-- Opciones para los ejercicios se llenarán aquí -->
                 </select>
                 <input type="hidden" id="exercise_type_id" name="exercise_type_id" />
+                <input type="hidden" id="routine_id" name="routine_id" /> <!-- Campo oculto para routineId -->
 
                 <label for="sets_completed">Sets Completed</label>
                 <input type="number" id="sets_completed" name="sets_completed" min="0" required>
