--- a/GymApp/wwwroot/css/site.css
+++ b/GymApp/wwwroot/css/site.css
@@ -1,31 +1,140 @@
-﻿
-.container {
-
-    padding: 20px;
-    margin: 0 auto;
-    background: #E0E0E0;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+﻿body {
+    font-family: 'Lora', serif;
+    background-color: #1e4f4f;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
 
-.center-content {
+.hero-section {
+    position: relative;
+    background-image: url('/css/Img/background.png'); 
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    
+}
+hero_section
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7px;
+}
+
+.hero-content {
+    z-index: 2;
+    max-width: 800px;
+}
+
+    .hero-content h1 {
+        font-size: 3.5em;
+        margin-bottom: 0.5em;
+    }
+
+    .hero-content p {
+        font-size: 1.5em;
+    }
+
+.pricing-section {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.pricing-card {
+    background: white;
+    color: #1e4f4f;
+    padding: 50px;
+    border-radius: 10px;
+    text-align: center;
+    width: 30%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+    .pricing-card h2 {
+        margin-bottom: 20px;
+        font-size: 1.5em;
+    }
+
+.price {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+.currency {
+    font-size: 0.5em;
+    vertical-align: top;
+}
+
+.amount {
+    font-size: 1.5em;
+}
+
+.cents {
+    font-size: 0.5em;
+}
+
+.contact-section {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+    .contact-section div {
+        width: 30%;
+    }
+
+    .contact-section h3 {
+        margin-bottom: 10px;
+    }
+
+.contact-info a {
+    display: block;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.newsletter label {
+    display: block;
+    margin-top: 20px;
+}
+
+.newsletter input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    border: none;
+}
+
+.button-container {
+    margin-top: 20px;
     text-align: center;
 }
 
-h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: black; 
-    text-transform: uppercase;
-    letter-spacing: 2px;
+.btn-success {
+    background-color: #1e4f4f;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-size: 1em;
+    cursor: pointer;
 }
 
-p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-    color: black;
-}
-
-.pb-3 {
-    padding-bottom: 1rem;
-}
+    .btn-success:hover {
+        background-color: #333;
+    }
