--- a/GymApp/Views/Default/DefaultPage.cshtml
+++ b/GymApp/Views/Default/DefaultPage.cshtml
@@ -3,7 +3,7 @@
     Layout = "../Shared/_LayoutRoutines.cshtml";
 }
 <script src="~/js/Pages/Default/Default.js" defer></script>
-<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="~/css/default.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 
