--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -48,8 +48,8 @@
 
 <section class="contact-section container">
     <div class="location">
-        <h3>Guachipelin, Escazu</h3>
-        <h3>San Jose, Costa Rica</h3>
+        <h3>Guachipelin, Escazú</h3>
+        <h3>San José, Costa Rica</h3>
     </div>
 
     <div class="contact-info">
